fix text overflow for side tab

--- a/src/style/event_list.scss
+++ b/src/style/event_list.scss
@@ -26,6 +26,7 @@
 .event-text {
   width: inherit;
   max-width: 100px;
+  text-overflow: ellipsis;
 }
 
 #event-menu {
